# CPR

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  justfile  quick_decode.py
include/: CLI.h  bit_buffer.h  code.h  cpr_core.h  encoder.h  tree.h
src/: CLI.cpp  bit_buffer.cpp  code.cpp  cpr_core.cpp  encoder.cpp  main.cpp  tree.cpp
